# FinsmartAI

./: .gitignore  README.md  test_fix.py
FinSmartBackend/: crew_service.py  main.py  model_loader.py  models.py  new-blog-post.md  requirements.txt  savings_analysis.py  schemas.py
FinSmartBackend/Agent/: agents.py  crew.py  tasks.py  tools.py
FinSmartBackend/market_sentiment/: __init__.py  __main__.py  api_client.py  config.py  financial_datasets_client.py  main.py  market_data_analyzer.py  news_engine.py  (+1 more)
frontend/: package.json
shiva_repo/: README.md  model_loader.py  requirements.txt  streamlit_app.py  syntax_check.py
shiva_repo/FinSmartAI/: .gitignore  README.md  pyproject.toml  requirements.txt
shiva_repo/FinSmartAI/Agent/: tools.py
shiva_repo/FinSmartAI/api/: crew_service.py  main.py
thiru_repo/: .gitignore  README.md  debug_db.py  pyproject.toml  requirements.txt  requirements_updated.txt  test.txt  verify_backend.py
thiru_repo/Datasets/: dataset.json  final.py  final_merged_dataset.json  finance_finetune_data.json
thiru_repo/FinRAG/: .env.example  app.py  config.py  debug_env.py
thiru_repo/FinRAG/finrag/: astradb_vectorstore.py  ingest_service.py  model_factory.py  prompt_templates.py  retriever.py
thiru_repo/Fin_Personal_Assitant/: .env.example  budget_recommendation.py  expenses_categorizer.py  investment_advisor.py  model_loader.py  streamlit_app.py
thiru_repo/Fin_Personal_Assitant/finance_bot/: core.py  general_qa.py  tools.py
thiru_repo/backend/: main.py  schemas.py
thiru_repo/backend/routers/: finance_routes.py  rag_routes.py
(+13 files in other folders)
