[project]
name = "finsmartai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "astrapy>=2.0.0",
    "langchain>=0.3.10,<0.4.0",
    "langchain-astradb>=1.0.0",
    "langchain-community>=0.3.10,<0.4.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
